--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@mui/icons-material": "^5.14.12",
     "@mui/material": "^5.14.12",
+    "@react-navigation/native": "^6.1.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0"
