--- a/package.json
+++ b/package.json
@@ -31,5 +31,6 @@
     "tailwindcss": "^3.3.3",
     "vite": "^4.4.5",
     "vite-plugin-svgr": "^4.1.0"
-  }
+  },
+  "proxy": "http://52.79.132.18:8443"
 }
