--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@mui/icons-material": "^5.14.12",
     "@mui/material": "^5.14.12",
     "@react-navigation/native": "^6.1.8",
+    "@stomp/stompjs": "^7.0.0",
     "axios": "^1.6.0",
+    "base-64": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.16.0",
-    "socket.io-client": "^4.7.2"
+    "socket.io-client": "^4.7.2",
+    "ws": "^8.14.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
