--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "base-64": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-file-base64": "^1.0.3",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.16.0",
     "socket.io-client": "^4.7.2",
+    "sockjs-client": "^1.6.1",
     "ws": "^8.14.2"
   },
   "devDependencies": {
