--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-file-base64": "^1.0.3",
+    "react-gauge-chart": "^0.4.1",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.16.0",
     "socket.io-client": "^4.7.2",
