--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mui/icons-material": "^5.14.12",
     "@mui/material": "^5.14.12",
     "@react-navigation/native": "^6.1.8",
+    "@reduxjs/toolkit": "^1.9.7",
     "@stomp/stompjs": "^7.0.0",
     "axios": "^1.6.0",
     "base-64": "^1.0.0",
@@ -22,7 +23,9 @@
     "react-file-base64": "^1.0.3",
     "react-gauge-chart": "^0.4.1",
     "react-modal": "^3.16.1",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
+    "redux": "^4.2.1",
     "socket.io-client": "^4.7.2",
     "sockjs-client": "^1.6.1",
     "ws": "^8.14.2"
