--- a/package.json
+++ b/package.json
@@ -43,5 +43,11 @@
     "tailwindcss": "^3.3.3",
     "vite": "^4.4.5",
     "vite-plugin-svgr": "^4.1.0"
+  },
+  "paths": {
+    "*": [
+      "*",
+      "*.jsx"
+    ]
   }
 }
